some what working

--- a/lineSwitch.ipynb
+++ b/lineSwitch.ipynb
@@ -4,14 +4,15 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "import turtle\n",
     "import time\n",
     "import numpy as np\n",
-    "import random"
+    "import random\n",
+    "# import winsound"
    ]
   },
   {
@@ -67,7 +68,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def plotDotBlinck(pen,ii,jj):\n",
+    "    pen.color(\"red\")\n",
+    "    pen.setheading(0)\n",
+    "    pen.pensize(6)\n",
+    "    \n",
+    "    pen.penup()\n",
+    "    pen.goto(ii,jj)\n",
+    "\n",
+    "    pen.pendown()\n",
+    "    pen.dot()\n",
+    "#     wn.update()\n",
+    "#     pen.clear()    \n",
+    "#     frequency = 2500  # Set Frequency To 2500 Hertz\n",
+    "#     duration = 1000  # Set Duration To 1000 ms == 1 second\n",
+    "#     winsound.Beep(frequency, duration)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -88,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 504,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -102,7 +129,8 @@
     "        slope = 0.000000001\n",
     "    sData = slope+1/slope\n",
     "#     slopeTu = np.sin(1*np.pi-ii*np.pi/180-ang)\n",
-    "    slopeTu = np.cos(1*np.pi-ii*np.pi/180-ang)\n",
+    "    slopeTu = -1/np.cos(1*np.pi-ii*np.pi/180-ang)\n",
+    "#     print(slopeTu)\n",
     "#     slopeTu = np.sqrt(1+np.square(1/slope)) \n",
     "    for jj in slopeOffset:\n",
     "        #working\n",
@@ -111,14 +139,14 @@
     "#         xPrime = (tempo[:,[1]]+1/slope*tempo[:,[0]]-1*jj*slopeTu)/sData\n",
     "#         yPrime = slope*(xPrime)+(jj*slopeTu)\n",
     "        dist = np.sqrt(np.square(xPrime-tempo[:,[0]])+np.square(yPrime-tempo[:,[1]]))\n",
-    "        dist = dist.round(1)\n",
+    "        dist = dist.round(3)\n",
     "        distList.append(dist)\n",
     "    return np.array(distList)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 505,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -126,189 +154,64 @@
     {
      "data": {
       "text/plain": [
-       "array([[160,  50],\n",
-       "       [  0,   0],\n",
-       "       [100, 100],\n",
-       "       [  0, 100],\n",
-       "       [100,   5]])"
+       "array([[116,  44],\n",
+       "       [ 27,  62],\n",
+       "       [-59,  44]])"
       ]
      },
-     "execution_count": 505,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "temp = np.array([[160,50],[0,0],[100,100],[0,100],[100,5]])\n",
-    "# numb = 10\n",
-    "# temp = np.random.randint(-150,150,[numb,2])\n",
+    "# temp = np.array([[160,50],[0,0],[100,100],[0,100],[100,5]])\n",
+    "numb = 3\n",
+    "temp = np.random.randint(-150,150,[numb,2])\n",
     "# temp = np.array([[-200,200],[-150,78],[0,0],[100,100],[-100,100],[100,-150]])\n",
     "temp"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 506,
+   "execution_count": 15,
    "metadata": {
-    "collapsed": false,
-    "scrolled": true
+    "collapsed": false
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "38.0\n",
-      "[[[   0.6]\n",
-      "  [ 138.5]\n",
-      "  [   1.8]\n",
-      "  [  59.7]\n",
-      "  [  73. ]]\n",
-      "\n",
-      " [[   0. ]\n",
-      "  [ 137.9]\n",
-      "  [   2.5]\n",
-      "  [  59.1]\n",
-      "  [  72.4]]\n",
-      "\n",
-      " [[   0.6]\n",
-      "  [ 137.3]\n",
-      "  [   3.1]\n",
-      "  [  58.5]\n",
-      "  [  71.8]]]\n",
+      "10.5 in-condition\n",
+      "10.5 [1]\n",
       "-------------\n",
-      "38.5\n",
-      "[[[   0.6]\n",
-      "  [ 139.3]\n",
-      "  [   1.2]\n",
-      "  [  61.1]\n",
-      "  [  73.2]]\n",
-      "\n",
-      " [[   0. ]\n",
-      "  [ 138.7]\n",
-      "  [   1.8]\n",
-      "  [  60.5]\n",
-      "  [  72.6]]\n",
-      "\n",
-      " [[   0.6]\n",
-      "  [ 138.1]\n",
-      "  [   2.4]\n",
-      "  [  59.9]\n",
-      "  [  72. ]]]\n",
+      "167.5 in-condition\n",
+      "167.5 [2]\n",
       "-------------\n",
-      "39.0\n",
-      "[[[   0.6]\n",
-      "  [ 140.2]\n",
-      "  [   0.5]\n",
-      "  [  62.4]\n",
-      "  [  73.3]]\n",
-      "\n",
-      " [[   0. ]\n",
-      "  [ 139.5]\n",
-      "  [   1.1]\n",
-      "  [  61.8]\n",
-      "  [  72.7]]\n",
-      "\n",
-      " [[   0.6]\n",
-      "  [ 138.9]\n",
-      "  [   1.7]\n",
-      "  [  61.2]\n",
-      "  [  72.1]]]\n",
+      "180.0 in-condition\n",
+      "180.0 [0]\n",
       "-------------\n",
-      "39.5\n",
-      "[[[   0.6]\n",
-      "  [ 140.9]\n",
-      "  [   0.2]\n",
-      "  [  63.8]\n",
-      "  [  73.5]]\n",
-      "\n",
-      " [[   0. ]\n",
-      "  [ 140.4]\n",
-      "  [   0.4]\n",
-      "  [  63.2]\n",
-      "  [  72.9]]\n",
-      "\n",
-      " [[   0.6]\n",
-      "  [ 139.8]\n",
-      "  [   1. ]\n",
-      "  [  62.6]\n",
-      "  [  72.3]]]\n",
+      "190.5 in-condition\n",
+      "190.5 [1]\n",
       "-------------\n",
-      "40.0\n",
-      "[[[   0.6]\n",
-      "  [ 141.7]\n",
-      "  [   0.9]\n",
-      "  [  65.1]\n",
-      "  [  73.6]]\n",
-      "\n",
-      " [[   0. ]\n",
-      "  [ 141.1]\n",
-      "  [   0.3]\n",
-      "  [  64.5]\n",
-      "  [  73. ]]\n",
-      "\n",
-      " [[   0.6]\n",
-      "  [ 140.6]\n",
-      "  [   0.3]\n",
-      "  [  64. ]\n",
-      "  [  72.5]]]\n",
+      "347.5 in-condition\n",
+      "347.5 [2]\n",
       "-------------\n",
-      "40.5\n",
-      "[[[   0.6]\n",
-      "  [ 142.5]\n",
-      "  [   1.5]\n",
-      "  [  66.5]\n",
-      "  [  73.8]]\n",
-      "\n",
-      " [[   0. ]\n",
-      "  [ 141.9]\n",
-      "  [   0.9]\n",
-      "  [  65.9]\n",
-      "  [  73.2]]\n",
-      "\n",
-      " [[   0.6]\n",
-      "  [ 141.4]\n",
-      "  [   0.4]\n",
-      "  [  65.3]\n",
-      "  [  72.6]]]\n",
+      "360.0 in-condition\n",
+      "360.0 [0]\n",
       "-------------\n",
-      "41.0\n",
-      "[[[   0.6]\n",
-      "  [ 143.3]\n",
-      "  [   2.2]\n",
-      "  [  67.8]\n",
-      "  [  73.9]]\n",
-      "\n",
-      " [[   0. ]\n",
-      "  [ 142.7]\n",
-      "  [   1.6]\n",
-      "  [  67.2]\n",
-      "  [  73.3]]\n",
-      "\n",
-      " [[   0.6]\n",
-      "  [ 142.1]\n",
-      "  [   1.1]\n",
-      "  [  66.7]\n",
-      "  [  72.8]]]\n",
+      "0.0 in-condition\n",
+      "0.0 [2]\n",
       "-------------\n",
-      "41.5\n",
-      "[[[   0.6]\n",
-      "  [ 144. ]\n",
-      "  [   2.9]\n",
-      "  [  69.1]\n",
-      "  [  74. ]]\n",
-      "\n",
-      " [[   0. ]\n",
-      "  [ 143.5]\n",
-      "  [   2.3]\n",
-      "  [  68.6]\n",
-      "  [  73.5]]\n",
-      "\n",
-      " [[   0.6]\n",
-      "  [ 142.9]\n",
-      "  [   1.7]\n",
-      "  [  68. ]\n",
-      "  [  72.9]]]\n",
+      "167.5 in-condition\n",
+      "167.5 [1]\n",
+      "-------------\n",
+      "190.5 in-condition\n",
+      "190.5 [0]\n",
+      "-------------\n",
+      "360.0 in-condition\n",
+      "360.0 [2]\n",
       "-------------\n"
      ]
     }
@@ -318,14 +221,14 @@
     "tempo = tempo-tempo[0,:]\n",
     "index = np.array([0])\n",
     "x,y = temp[index,:][0]\n",
-    "indList=[np.zeros([1]),np.zeros([1])]\n",
+    "indList=[np.zeros([1])]#,np.zeros([1])]\n",
     "count = 0\n",
     "ang = 0\n",
     "prvInd = 0\n",
     "lastInd = 0\n",
     "indKyu =[np.zeros([1,2]),np.zeros([1,2])] \n",
-    "for _ in range(1):\n",
-    "    for ii in np.arange(38,42,0.5):\n",
+    "for _ in range(2):\n",
+    "    for ii in np.arange(0,360.5,0.5):\n",
     "        drawLine(600,pen,ii,x,y)\n",
     "        plotDot(pen,temp.tolist())\n",
     "        wn.update()\n",
@@ -334,58 +237,110 @@
     "        dist = distList(ii,ang,tempo)\n",
     "        offsetSum = np.sum(dist[[0,2],:],axis=0)\n",
     "        theta = np.array(offsetSum-offsetSum[index])\n",
-    "        theta = theta.round(1)\n",
+    "#         theta = theta.round(1)\n",
     "        indFind = np.where(theta <= 1)[0]\n",
-    "        print(ii)\n",
-    "        print(dist)\n",
+    "#         print(ii)\n",
+    "#         print(dist)\n",
     "\n",
-    "#         if len(indFind)>=2 and np.abs(ii-lastInd) >= 3.0:\n",
-    "#             print(ii,'in-condition')\n",
-    "#             lastInd = ii\n",
-    "#             indNxt = np.where(indFind != index)\n",
-    "# #             print(tempo[indFind[indNxt]])\n",
-    "#             index = indFind[indNxt]\n",
-    "#             if len(index) > 1:\n",
-    "#                 print('2 index')\n",
-    "#                 ll= np.where(theta[index] == np.min(theta[index]))[0]\n",
-    "#                 index = index[ll]\n",
-    "#             indList.append(index)\n",
-    "# #             print(indList,len(indList))\n",
-    "#             aa = indList.pop(0)\n",
-    "#             if aa == index:\n",
-    "#                 print('continue')\n",
-    "#                 continue\n",
-    "# #             print(indList,len(indList),aa)\n",
-    "#             x,y = temp[index,:][0]\n",
-    "# #             print(tempo[index,:][0])\n",
-    "#             tempo = tempo-tempo[index,:]\n",
-    "# #             ang += np.pi\n",
+    "        if len(indFind)>=2 and np.abs(ii-lastInd) > 2.0:\n",
+    "            print(ii,'in-condition')\n",
+    "            lastInd = ii\n",
+    "            indNxt = np.where(indFind != index)\n",
+    "#             print(tempo[indFind[indNxt]])\n",
+    "            index = indFind[indNxt]\n",
+    "            if len(index) > 1:\n",
+    "                print('2 index')\n",
+    "                ll= np.where(theta[index] == np.min(theta[index]))[0]\n",
+    "                if len(ll) > 1:\n",
+    "                    indNew = np.sum(np.square(tempo[ll]),axis=1)\n",
+    "                    indNew = np.where(indNew == np.min(indNew))[0]\n",
+    "                    index = index[indNew]\n",
+    "                else:\n",
+    "                    index = index[ll]\n",
+    "            indList.append(index)\n",
+    "#             print(indList,len(indList))\n",
+    "            aa = indList.pop(0)\n",
+    "            if aa == index:\n",
+    "                print('continue')\n",
+    "                continue\n",
+    "#             print(indList,len(indList),aa)\n",
+    "            x,y = temp[index,:][0]\n",
+    "            plotDotBlinck(pen,x,y)\n",
+    "\n",
+    "#             print(tempo[index,:][0])\n",
+    "            tempo = tempo-tempo[index,:]\n",
+    "#             ang += np.pi\n",
     "            \n",
-    "#             print(ii,index)\n",
+    "            print(ii,index)\n",
     "#             print(temp[index,:][0])\n",
     "            \n",
-    "        print('-------------')\n",
+    "            print('-------------')\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 465,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0])"
-      ]
-     },
-     "execution_count": 465,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "indNew = np.sum(np.square(tempo[ll]-[x,y]),axis=1)\n",
+    "np.where(indNew == np.min(indNew))[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "theta[index]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "tempo[index]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "print(x,y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
    "source": [
     "ll= np.where(theta[index] == np.min(theta[index]))[0]\n",
     "ll"
@@ -393,68 +348,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 453,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([1, 3])"
-      ]
-     },
-     "execution_count": 453,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "index"
+    "theta[index]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 358,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[-200,  200],\n",
-       "       [-150,   78],\n",
-       "       [   0,    0],\n",
-       "       [ 100,  100],\n",
-       "       [-100,  100],\n",
-       "       [ 100, -150]])"
-      ]
-     },
-     "execution_count": 358,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "temp"
+    "# import os\n",
+    "# duration = 3  # seconds\n",
+    "# freq = 4110  # Hz\n",
+    "# os.system('play -nq -t alsa synth {} sine {}'.format(duration, freq))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[4] [0]\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "y\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
    "source": [
     "theta = offsetSum-offsetSum[index]\n",
     "i,j = np.where( theta==np.min(theta[np.nonzero(theta)]))\n",
@@ -463,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 424,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -474,22 +408,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 425,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 0.])"
-      ]
-     },
-     "execution_count": 425,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "aa.pop(0)"
    ]
@@ -515,22 +438,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([], dtype=float64)"
-      ]
-     },
-     "execution_count": 147,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "cc = np.array([])\n",
     "cc"
