--- a/lineSwitch.ipynb
+++ b/lineSwitch.ipynb
@@ -68,16 +68,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def plotDotBlinck(pen,ii,jj):\n",
-    "    pen.color(\"red\")\n",
+    "    pen.color(\"blue\")\n",
     "    pen.setheading(0)\n",
-    "    pen.pensize(6)\n",
+    "    pen.pensize(5)\n",
     "    \n",
     "    pen.penup()\n",
     "    pen.goto(ii,jj)\n",
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 62,
    "metadata": {
     "collapsed": false
    },
@@ -154,19 +154,31 @@
     {
      "data": {
       "text/plain": [
-       "array([[116,  44],\n",
-       "       [ 27,  62],\n",
-       "       [-59,  44]])"
+       "array([[  -1, -114],\n",
+       "       [ -17,  115],\n",
+       "       [  90, -107],\n",
+       "       [  34, -134],\n",
+       "       [ -42,  -70],\n",
+       "       [ -92,  -32],\n",
+       "       [  85,   27],\n",
+       "       [  83, -136],\n",
+       "       [  26,   59],\n",
+       "       [ 144,   98],\n",
+       "       [  23,  117],\n",
+       "       [-104,  -26],\n",
+       "       [-141,   -7],\n",
+       "       [ -55,  134],\n",
+       "       [ -60, -113]])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# temp = np.array([[160,50],[0,0],[100,100],[0,100],[100,5]])\n",
-    "numb = 3\n",
+    "numb = 15\n",
     "temp = np.random.randint(-150,150,[numb,2])\n",
     "# temp = np.array([[-200,200],[-150,78],[0,0],[100,100],[-100,100],[100,-150]])\n",
     "temp"
@@ -174,45 +186,213 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 63,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10.5 in-condition\n",
-      "10.5 [1]\n",
+      "1.5 in-condition\n",
+      "1.5 2.0 [14]\n",
       "-------------\n",
-      "167.5 in-condition\n",
-      "167.5 [2]\n",
+      "9.0 in-condition\n",
+      "9.0 9.5 [7]\n",
       "-------------\n",
-      "180.0 in-condition\n",
-      "180.0 [0]\n",
+      "14.0 in-condition\n",
+      "14.0 14.5 [0]\n",
       "-------------\n",
-      "190.5 in-condition\n",
-      "190.5 [1]\n",
+      "15.5 in-condition\n",
+      "continue\n",
+      "17.0 in-condition\n",
+      "continue\n",
+      "28.0 in-condition\n",
+      "28.0 28.5 [3]\n",
       "-------------\n",
-      "347.5 in-condition\n",
-      "347.5 [2]\n",
+      "29.5 in-condition\n",
+      "continue\n",
+      "31.0 in-condition\n",
+      "continue\n",
+      "36.0 in-condition\n",
+      "36.0 36.5 [12]\n",
       "-------------\n",
-      "360.0 in-condition\n",
-      "360.0 [0]\n",
+      "37.5 in-condition\n",
+      "37.5 38.0 [0]\n",
       "-------------\n",
-      "0.0 in-condition\n",
-      "0.0 [2]\n",
+      "40.0 in-condition\n",
+      "40.0 40.5 [11]\n",
       "-------------\n",
-      "167.5 in-condition\n",
-      "167.5 [1]\n",
+      "62.5 in-condition\n",
+      "62.5 63.0 [14]\n",
       "-------------\n",
-      "190.5 in-condition\n",
-      "190.5 [0]\n",
+      "64.0 in-condition\n",
+      "continue\n",
+      "65.5 in-condition\n",
+      "continue\n",
+      "67.5 in-condition\n",
+      "67.5 68.0 [5]\n",
       "-------------\n",
-      "360.0 in-condition\n",
-      "360.0 [2]\n",
-      "-------------\n"
+      "69.0 in-condition\n",
+      "continue\n",
+      "70.5 in-condition\n",
+      "continue\n",
+      "102.5 in-condition\n",
+      "102.5 103.0 [13]\n",
+      "-------------\n",
+      "107.0 in-condition\n",
+      "107.0 107.5 [11]\n",
+      "-------------\n",
+      "121.5 in-condition\n",
+      "121.5 122.0 [1]\n",
+      "-------------\n",
+      "135.0 in-condition\n",
+      "135.0 135.5 [12]\n",
+      "-------------\n",
+      "142.5 in-condition\n",
+      "142.5 143.0 [10]\n",
+      "-------------\n",
+      "175.0 in-condition\n",
+      "175.0 175.5 [1]\n",
+      "-------------\n",
+      "176.5 in-condition\n",
+      "continue\n",
+      "178.0 in-condition\n",
+      "continue\n",
+      "185.5 in-condition\n",
+      "185.5 186.0 [9]\n",
+      "-------------\n",
+      "188.5 in-condition\n",
+      "188.5 189.0 [10]\n",
+      "-------------\n",
+      "191.5 in-condition\n",
+      "191.5 192.0 [13]\n",
+      "-------------\n",
+      "193.0 in-condition\n",
+      "continue\n",
+      "194.5 in-condition\n",
+      "continue\n",
+      "205.0 in-condition\n",
+      "205.0 205.5 [1]\n",
+      "-------------\n",
+      "206.5 in-condition\n",
+      "continue\n",
+      "208.0 in-condition\n",
+      "continue\n",
+      "220.5 in-condition\n",
+      "220.5 221.0 [6]\n",
+      "-------------\n",
+      "235.0 in-condition\n",
+      "235.0 235.5 [10]\n",
+      "-------------\n",
+      "253.0 in-condition\n",
+      "253.0 253.5 [2]\n",
+      "-------------\n",
+      "267.5 in-condition\n",
+      "267.5 268.0 [6]\n",
+      "-------------\n",
+      "270.5 in-condition\n",
+      "270.5 271.0 [7]\n",
+      "-------------\n",
+      "281.0 in-condition\n",
+      "281.0 281.5 [2]\n",
+      "-------------\n",
+      "282.5 in-condition\n",
+      "continue\n",
+      "284.0 in-condition\n",
+      "continue\n",
+      "285.5 in-condition\n",
+      "continue\n",
+      "287.0 in-condition\n",
+      "continue\n",
+      "333.0 in-condition\n",
+      "333.0 333.5 [3]\n",
+      "-------------\n",
+      "334.5 in-condition\n",
+      "continue\n",
+      "336.0 in-condition\n",
+      "continue\n",
+      "1.0 in-condition\n",
+      "1.0 361.5 [7]\n",
+      "-------------\n",
+      "2.5 in-condition\n",
+      "continue\n",
+      "4.0 in-condition\n",
+      "continue\n",
+      "9.0 in-condition\n",
+      "9.0 369.5 [14]\n",
+      "-------------\n",
+      "12.0 in-condition\n",
+      "12.0 372.5 [3]\n",
+      "-------------\n",
+      "28.0 in-condition\n",
+      "28.0 388.5 [0]\n",
+      "-------------\n",
+      "29.5 in-condition\n",
+      "continue\n",
+      "31.0 in-condition\n",
+      "continue\n",
+      "37.0 in-condition\n",
+      "37.0 397.5 [12]\n",
+      "-------------\n",
+      "52.0 in-condition\n",
+      "52.0 412.5 [14]\n",
+      "-------------\n",
+      "62.5 in-condition\n",
+      "62.5 423.0 [11]\n",
+      "-------------\n",
+      "64.0 in-condition\n",
+      "continue\n",
+      "65.5 in-condition\n",
+      "continue\n",
+      "107.0 in-condition\n",
+      "107.0 467.5 [13]\n",
+      "-------------\n",
+      "121.0 in-condition\n",
+      "121.0 481.5 [12]\n",
+      "-------------\n",
+      "135.0 in-condition\n",
+      "135.0 495.5 [1]\n",
+      "-------------\n",
+      "175.0 in-condition\n",
+      "175.0 535.5 [10]\n",
+      "-------------\n",
+      "176.5 in-condition\n",
+      "continue\n",
+      "178.0 in-condition\n",
+      "continue\n",
+      "188.5 in-condition\n",
+      "188.5 549.0 [9]\n",
+      "-------------\n",
+      "190.0 in-condition\n",
+      "190.0 550.5 [13]\n",
+      "-------------\n",
+      "191.5 in-condition\n",
+      "191.5 552.0 [10]\n",
+      "-------------\n",
+      "193.0 in-condition\n",
+      "continue\n",
+      "194.5 in-condition\n",
+      "continue\n",
+      "235.0 in-condition\n",
+      "235.0 595.5 [6]\n",
+      "-------------\n",
+      "267.5 in-condition\n",
+      "267.5 628.0 [2]\n",
+      "-------------\n",
+      "281.0 in-condition\n",
+      "281.0 641.5 [7]\n",
+      "-------------\n",
+      "282.5 in-condition\n",
+      "continue\n",
+      "284.0 in-condition\n",
+      "continue\n",
+      "285.5 in-condition\n",
+      "continue\n",
+      "287.0 in-condition\n",
+      "continue\n"
      ]
     }
    ],
@@ -221,60 +401,64 @@
     "tempo = tempo-tempo[0,:]\n",
     "index = np.array([0])\n",
     "x,y = temp[index,:][0]\n",
-    "indList=[np.zeros([1])]#,np.zeros([1])]\n",
+    "indList=[np.zeros([1]),np.zeros([1])]\n",
     "count = 0\n",
     "ang = 0\n",
     "prvInd = 0\n",
     "lastInd = 0\n",
     "indKyu =[np.zeros([1,2]),np.zeros([1,2])] \n",
-    "for _ in range(2):\n",
-    "    for ii in np.arange(0,360.5,0.5):\n",
-    "        drawLine(600,pen,ii,x,y)\n",
-    "        plotDot(pen,temp.tolist())\n",
-    "        wn.update()\n",
-    "        time.sleep(0.005)\n",
-    "        pen.clear()\n",
-    "        dist = distList(ii,ang,tempo)\n",
-    "        offsetSum = np.sum(dist[[0,2],:],axis=0)\n",
-    "        theta = np.array(offsetSum-offsetSum[index])\n",
+    "for _ in np.arange(0,360.5*2,0.5):#range(0,360,0.5):\n",
+    "    ii = count%360\n",
+    "#     print(ii)\n",
+    "    count += 0.5\n",
+    "#     for ii in np.arange(0,360.5,0.5):\n",
+    "    drawLine(600,pen,ii,x,y)\n",
+    "    plotDot(pen,temp.tolist())\n",
+    "    plotDotBlinck(pen,x,y)\n",
+    "    wn.update()\n",
+    "    time.sleep(0.005)\n",
+    "    pen.clear()\n",
+    "    dist = distList(ii,ang,tempo)\n",
+    "    offsetSum = np.sum(dist[[0,2],:],axis=0)\n",
+    "    theta = np.array(offsetSum-offsetSum[index])\n",
     "#         theta = theta.round(1)\n",
-    "        indFind = np.where(theta <= 1)[0]\n",
+    "    indFind = np.where(theta <= 1)[0]\n",
     "#         print(ii)\n",
     "#         print(dist)\n",
     "\n",
-    "        if len(indFind)>=2 and np.abs(ii-lastInd) > 2.0:\n",
-    "            print(ii,'in-condition')\n",
-    "            lastInd = ii\n",
-    "            indNxt = np.where(indFind != index)\n",
+    "    if len(indFind)>=2 and np.abs(ii-lastInd) > 1.0:\n",
+    "        print(ii,'in-condition')\n",
+    "        lastInd = ii\n",
+    "        indNxt = np.where(indFind != index)\n",
     "#             print(tempo[indFind[indNxt]])\n",
-    "            index = indFind[indNxt]\n",
-    "            if len(index) > 1:\n",
-    "                print('2 index')\n",
-    "                ll= np.where(theta[index] == np.min(theta[index]))[0]\n",
-    "                if len(ll) > 1:\n",
-    "                    indNew = np.sum(np.square(tempo[ll]),axis=1)\n",
-    "                    indNew = np.where(indNew == np.min(indNew))[0]\n",
-    "                    index = index[indNew]\n",
-    "                else:\n",
-    "                    index = index[ll]\n",
-    "            indList.append(index)\n",
+    "        index = indFind[indNxt]\n",
+    "        if len(index) > 1:\n",
+    "            print('2 index')\n",
+    "            ll= np.where(theta[index] == np.min(theta[index]))[0]\n",
+    "            if len(ll) > 1:\n",
+    "                indNew = np.sum(np.square(tempo[ll]),axis=1)\n",
+    "                indNew = np.where(indNew == np.min(indNew))[0]\n",
+    "                index = index[indNew]\n",
+    "            else:\n",
+    "                index = index[ll]\n",
+    "        indList.append(index)\n",
     "#             print(indList,len(indList))\n",
-    "            aa = indList.pop(0)\n",
-    "            if aa == index:\n",
-    "                print('continue')\n",
-    "                continue\n",
+    "        aa = indList.pop(0)\n",
+    "        if aa == index:\n",
+    "            print('continue')\n",
+    "            continue\n",
     "#             print(indList,len(indList),aa)\n",
-    "            x,y = temp[index,:][0]\n",
-    "            plotDotBlinck(pen,x,y)\n",
+    "        x,y = temp[index,:][0]\n",
+    "#             plotDotBlinck(pen,x,y)\n",
     "\n",
     "#             print(tempo[index,:][0])\n",
-    "            tempo = tempo-tempo[index,:]\n",
-    "#             ang += np.pi\n",
-    "            \n",
-    "            print(ii,index)\n",
+    "        tempo = tempo-tempo[index,:]\n",
+    "#         ang += np.pi\n",
+    "\n",
+    "        print(ii,count,index)\n",
     "#             print(temp[index,:][0])\n",
-    "            \n",
-    "            print('-------------')\n",
+    "\n",
+    "        print('-------------')\n",
     "\n"
    ]
   },
@@ -325,13 +509,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.5"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "index"
+    "3.5%360"
    ]
   },
   {
